--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,8 @@
     </div>
 </body>
 
-       
-<body>
-
+ 
+    
   
   <script>
   function sortTable(n) {
@@ -81,6 +80,28 @@
     }
   }
   
+  
+function filtro() {
+  var input, filter, table, tr, td, i, txtValue;
+  input = document.getElementById("inputFiltro");
+  filter = input.value.toUpperCase();
+  table = document.getElementById("tableRegistros");
+  tr = table.getElementsByTagName("tr");
+  for (i = 0; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[3];
+    if (td) {
+      txtValue = td.textContent || td.innerText;
+      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+    }       
+  }
+}
+</script>
+
+</body>
   </script>
 
 </html>
